@@ -136,17 +136,18 @@ public:
     }
   }
 
+  static QString getShell();
+  static bool isRootOnZFS();
+
+  static void execCommandAsNormalUser(const QString &pCommand);
+  static void execCommand(const QString &pCommand);
+  static QByteArray getCommandOutput(const QString &pCommand);
   static void removeTemporaryFiles();
 
   void openRootTerminal();
   void runCommandInTerminal(const QStringList& commandList);
   void runCommandInTerminalAsNormalUser(const QStringList& commandList);
   void terminateCommand();
-
-  static void execCommandAsNormalUser(const QString &pCommand);
-  static void execCommand(const QString &pCommand);
-  static QByteArray getCommandOutput(const QString &pCommand);
-
   void executeCommand(const QString &pCommand, Language lang=ectn_LANG_ENGLISH);
   void executeCommandAsNormalUser(const QString &pCommand);
 
