@@ -9,6 +9,7 @@
   BugFix: DragonFlyBSD support updated!
   BugFix: Let exit menu and close button enabled for cancelling running actions.
   Faster startup time thanks to deferred retrieval of outdated packages.
+  Added option to create backup boot environments before upgrades when root is on ZFS.
   Added support to HardenedBSD.
   Added Lumina desktop support.
   Added Info option on package list context menu.
